<resources>
    <string name="CryptoExplorer">Crypto Wallet : )</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register and Informations</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">LOGIN</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">REGISTRATION</string>
    <string name="your_name">Display Name</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="recover">Recover</string>
    <string name="swipe_right_for_registration">Swipe right for Registration</string>
    <string name="informations">informations</string>
    <string name="forgetPassword">Forget password</string>
    <string name="resendMail">Resend mail</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="englishGerman">English</string>

</resources>
