<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:background="#118AB2"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="#073B4C"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_arrow_right" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/roboto_regular"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/swipe_left_for_register"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <Button
        android:id="@+id/resendMail"
        android:layout_width="368dp"
        android:layout_height="50dp"
        android:layout_below="@+id/forgetPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#EF476F"
        android:text="@string/resendMail"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/forgetPassword"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFD166"
        android:text="@string/forgetPassword"
        android:textColor="@color/colorWhite" />

    <Switch
        android:id="@+id/language"
        android:layout_width="109dp"
        android:layout_height="53dp"
        android:layout_above="@+id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="39dp"
        android:text="@string/englishGerman"
        android:textColor="@color/colorWhite" />

</RelativeLayout>